Fix grid heights and footer alignment

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -110,14 +110,14 @@ ul {
 
 .container {
   display: grid;
-  grid-template: 180px 100px 1fr 140px / 1fr 4fr;
+  grid-template: auto auto 1fr auto / 1fr 4fr;
   gap: 4px;
 }
 
 .header {
   grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: 1fr 720px;
+  grid-template-columns: 1fr 960px;
   align-items: center;
 }
 
@@ -152,4 +152,6 @@ ul {
 
 .footer {
   grid-column: 1 / -1;
+  display: grid;
+  align-items: center;
 }
